# huABus-dev

./: .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .shellcheckrc  LICENSE  README-PRODUCTION.md  README.de-PRODUCTION.md  README.de.md  README.md  README_de.md  SECURITY.md  check_version_sync.py  generate_requirements.py  pyproject.toml  pyrightconfig.json  repository.json  repository.yaml  requirements-dev.txt  run_local.ps1  update_version.py
.github/: dependabot.yaml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yaml  release.yml  test.yaml
examples/: mqtt_payload.json
huawei-solar-modbus-mqtt/: .dockerignore  CHANGELOG.md  DOCS.de.md  DOCS.md  DOCS_de.md  Dockerfile  config.yaml  huawei2mqtt.py  requirements.txt  run.sh
huawei-solar-modbus-mqtt/modbus_energy_meter/: __init__.py  error_tracker.py  main.py  mqtt.py  mqtt_client.py  total_increasing_filter.py  transform.py
huawei-solar-modbus-mqtt/modbus_energy_meter/config/: __init__.py  mappings.py  sensors_mqtt.py
huawei-solar-modbus-mqtt/translations/: de.yaml  en.yaml
huawei_solar_modbus_mqtt/: .dockerignore  CHANGELOG.md  DOCS.de.md  DOCS.md  Dockerfile  README.md  apparmor.txt  config.yaml  requirements.txt  run.sh
huawei_solar_modbus_mqtt/bridge/: __version__.py  config_manager.py  error_tracker.py  logging_utils.py  main.py  mqtt_client.py  slave_detector.py  slavedetector.py  total_increasing_filter.py  transform.py  version.py
huawei_solar_modbus_mqtt/bridge/config/: mappings.py  registers.py  sensors_mqtt.py
huawei_solar_modbus_mqtt/modbus_energy_meter/: __init__.py  __version__.py  error_tracker.py
huawei_solar_modbus_mqtt/modbus_energy_meter/config/: mappings.py  registers.py  sensors_mqtt.py
huawei_solar_modbus_mqtt/translations/: de.yaml  en.yaml
notes/: README.md
scripts/: check_version_sync.py  push_to_prod.ps1  run_local.ps1  test_addon_update.ps1  update_version.py
tests/: conftest.py  test_config_manager.py  test_e2e.py  test_filter.py  test_filter_logging.py  test_hant_issue.py  test_hant_missing_keys.py  test_hant_zero_drops.py  test_integration.py  test_logging.py  test_main.py  test_mqtt_client.py  test_run.bats  test_slave_detector.py  test_slavedetector.py  test_total_increasing_filter.py  test_transform.py  test_warmup.py
tests/fixtures/: mock_inverter.py  mock_mqtt_broker.py  scenarios.yaml
