[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "huabus"
dynamic = ["version"]
description = "Huawei Solar Modbus via MQTT and Auto-Discovery"
authors = [{ name = "arboeh", email = "arend.boehmer@web.de" }]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Home Automation",
]
dependencies = [
    "huawei-solar>=2.1.5",
    "pymodbus>=3.8.3,<4.0.0",
    "paho-mqtt>=2.0.0"
]

[tool.setuptools.dynamic]
version = { attr = "bridge.__version__.__version__" }

[tool.setuptools.packages.find]
where = ["huawei_solar_modbus_mqtt"]
include = ["bridge*"]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "mypy>=1.14.0",
    "ruff>=0.9.0",
    "pre-commit>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/arboeh/huABus"
Repository = "https://github.com/arboeh/huABus"
Issues = "https://github.com/arboeh/huABus/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = "-v --strict-markers"

[tool.coverage.run]
source = ["huawei_solar_modbus_mqtt/bridge"]
omit = ["*/tests/*", "*/venv/*", "*/__version__.py"]

[tool.coverage.report]
fail_under = 70
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "if not TYPE_CHECKING:",
    "@overload",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = ["pymodbus.*", "huaweisolar.*"]
ignore_missing_imports = true

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 80
skip-magic-trailing-comma = false

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4"]
ignore = ["N802"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501"]
